--- a/app/src/main/res/layout/fragment_to_call_buffer.xml
+++ b/app/src/main/res/layout/fragment_to_call_buffer.xml
@@ -7,15 +7,15 @@
     tools:context="com.example.zhiruili.videoconf.ToCallBufferFragment">
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/called_account_input_layout"
+        android:id="@+id/called_id_input_layout"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/ib_add_called_account"
+        app:layout_constraintRight_toLeftOf="@+id/ib_add_called_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content">
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/et_called_account_input"
-            android:hint="@string/label_called_account_input_hint"
+            android:id="@+id/et_called_id_input"
+            android:hint="@string/label_called_id_input_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
@@ -24,12 +24,12 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.v7.widget.AppCompatImageButton
-        android:id="@+id/ib_add_called_account"
+        android:id="@+id/ib_add_called_id"
         android:src="@drawable/ic_add_black_24dp"
         android:tint="@android:color/white"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/called_account_input_layout"
-        app:layout_constraintBottom_toBottomOf="@+id/called_account_input_layout"
+        app:layout_constraintTop_toTopOf="@+id/called_id_input_layout"
+        app:layout_constraintBottom_toBottomOf="@+id/called_id_input_layout"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
@@ -46,7 +46,7 @@
         app:alignContent="space_between"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/called_account_input_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/called_id_input_layout" />
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_start_calling"
